--- a/손진영-ez2dj.html
+++ b/손진영-ez2dj.html
@@ -265,39 +265,35 @@
 
             words.appendChild(table)
         }
+        setTimeout(function () { add_note(leftlist[2]) });
+        setTimeout(function () { add_note(leftlist[2]) }, 400);
+        setTimeout(function () { add_note(leftlist[2]) }, 800);
+        setTimeout(function () { add_note(leftlist[2]) }, 1200);
 
-        // function add_intro_note(left, cus_top) {
-        //     let table = document.createElement("table")
-        //     table.style.left = `${left}px`
-        //     table.style.top = cus_top +`px`
-        //     words.appendChild(table)
-        // }
+        setTimeout(function () { add_note(leftlist[2]) }, 3000);
+        setTimeout(function () { add_note(leftlist[2]) }, 3200);
+        setTimeout(function () { add_note(leftlist[2]) }, 3600);
+        setTimeout(function () { add_note(leftlist[2]) }, 4000);
+        
+        setTimeout(function () { add_note(leftlist[2]) }, 6000);
+        setTimeout(function () { add_note(leftlist[2]) }, 6400);
+        setTimeout(function () { add_note(leftlist[2]) }, 6800);
+        setTimeout(function () { add_note(leftlist[2]) }, 7200);
 
-        // lane 1
-        // setTimeout(function () { add_intro_note(leftlist[0], 400) }, 0);
-        // setTimeout(function () { add_note(leftlist[0]) }, 350);
+        setTimeout(function () { add_note(leftlist[2]) }, 8800);
+        setTimeout(function () { add_note(leftlist[2]) }, 9200);
+        setTimeout(function () { add_note(leftlist[2]) }, 9600);
+        setTimeout(function () { add_note(leftlist[2]) }, 10000);
 
-        // lane 2
-        setTimeout(function () { add_note(leftlist[1]) }, 1600);
-        // $(".movenote").animate({top: "620px"}, {duration: 2000, easing: "linear" });
-        setTimeout(function () { add_note(leftlist[1]) }, 3200);
-        setTimeout(function () { add_note(leftlist[1]) }, 3600);
+        setTimeout(function () { add_note(leftlist[0]) }, 10200);
+        setTimeout(function () { add_note(leftlist[1]) }, 10400);
+        setTimeout(function () { add_note(leftlist[2]) }, 10600);
+        setTimeout(function () { add_note(leftlist[2]) }, 10800);
+        setTimeout(function () { add_note(leftlist[5]) }, 11200);
+        setTimeout(function () { add_note(leftlist[4]) }, 11600);
+        setTimeout(function () { add_note(leftlist[3]) }, 12000);
+        setTimeout(function () { add_note(leftlist[3]) }, 12400);
 
-
-        // lane 3
-        setTimeout(function () { add_note(leftlist[2]) }, 1400);
-        setTimeout(function () { add_note(leftlist[2]) }, 3400);
-
-        // lane 5
-        setTimeout(function () { add_note(leftlist[3]) }, 2000);
-
-
-        // lane 6
-        setTimeout(function () { add_note(leftlist[4]) }, 1800);
-
-
-        // lane 7
-        setTimeout(function () { add_note(leftlist[5]) }, 1600);
 
 
 
