--- a/손진영-ez2dj-test.html
+++ b/손진영-ez2dj-test.html
@@ -228,6 +228,7 @@
     <h1>What you need to learn</h1>
     <div id="wrap">
         <div id="words">
+            <!-- <div id="combo"></div> -->
             <div id="lane1"></div>
             <div id="lane2"></div>
             <div id="lane3"></div>
