--- a/combo.html
+++ b/combo.html
@@ -29,7 +29,7 @@
         /* font-size: 50px; */
         width: 50%;
         height: 25%;
-        border: 3px solid black;
+        /* border: 3px solid black; */
     }
 
     #combo_word {
@@ -73,6 +73,9 @@
             <div id="score">
                 <h2>1</h2>
             </div>
+        </div>
+        <div id="track">
+            
         </div>
     </div>
     <script>
