--- a/ez2dj.html
+++ b/ez2dj.html
@@ -20,6 +20,7 @@
   <body>
     <iframe class="song" hidden src="https://www.youtube.com/embed/wq9zM5je8pg?enablejsapi=1&version=3&playerapiid=ytplayer" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <main>
+      <div id="score_board"></div>
       <div class="game">
         <div class="hit">
           <div id="combo_word">
